<resources>
    <string name="app_name">CashRegisterAndroidApp</string>
    <string name="product_type">Type</string>
    <string name="product_qty">Quantity</string>
    <string name="product_total">Total</string>
    <string name="manager_btn">MANAGER</string>
    <string name="buy_btn">BUY</string>
    <string name="history_btn">HISTORY</string>
    <string name="restock_btn">RESTOCK</string>
    <string name="title_activity_restock">Restock</string>
    <string name="purchase_label_name">Name: %1$s</string>
    <string name="purchase_label_qty">Quantity: %1$s</string>
    <string name="purchase_label_total">Total: %1$s</string>
    <string name="purchase_label_date">Date: %1$s</string>
    <string name="cancel_button">Cancel</string>
    <string name="confirm_button">OK</string>
    <string name="qty_input">Enter quantity to restock</string>
    <string name="selected_product">Restocking: %1$s</string>
    <string name="not_selected_product">Please select a product</string>
</resources>